# hello_flecs

./: CMakeLists.txt
src/: main.cpp
